no longer need triple quotes

--- a/doc/plugins/brokenlinks.mdwn
+++ b/doc/plugins/brokenlinks.mdwn
@@ -1,4 +1,4 @@
-[[template id=plugin name=brokenlinks included=1 author="""[[Joey]]"""]]
+[[template id=plugin name=brokenlinks included=1 author="[[Joey]]"]]
 [[tag type/link type/meta]]
 
 This plugin generates a list of broken links on pages in the wiki. This is
