--- a/doc/plugins/fortune.mdwn
+++ b/doc/plugins/fortune.mdwn
@@ -1,4 +1,4 @@
-[[template id=plugin name=fortune included=1 author="""[[Joey]]"""]]
+[[template id=plugin name=fortune included=1 author="[[Joey]]"]]
 [[tag type/fun]]
 
 This just uses the `fortune` program to insert a fortune into the page.
