--- a/doc/plugins/haiku.mdwn
+++ b/doc/plugins/haiku.mdwn
@@ -1,4 +1,4 @@
-[[template id=plugin name=haiku included=1 author="""[[Joey]]"""]]
+[[template id=plugin name=haiku included=1 author="[[Joey]]"]]
 [[tag type/fun]]
 
 This plugin allows inserting a randomly generated haiku into a wiki page.
