--- a/doc/plugins/meta.mdwn
+++ b/doc/plugins/meta.mdwn
@@ -1,4 +1,4 @@
-[[template id=plugin name=meta included=1 author="""[[Joey]]"""]]
+[[template id=plugin name=meta included=1 author="[[Joey]]"]]
 [[tag type/meta]]
 
 This plugin allows inserting arbitrary metadata into the source of a page.
