--- a/doc/plugins/otl.mdwn
+++ b/doc/plugins/otl.mdwn
@@ -1,4 +1,4 @@
-[[template id=plugin name=otl included=1 author="""[[Joey]]"""]]
+[[template id=plugin name=otl included=1 author="[[Joey]]"]]
 [[tag type/format]]
 
 This plugin allows ikiwiki to process `.otl` outline files, as created by 
