--- a/doc/plugins/sidebar.mdwn
+++ b/doc/plugins/sidebar.mdwn
@@ -1,4 +1,4 @@
-[[template id=plugin name=sidebar included=1 author="""Tuomo Valkonen"""]]
+[[template id=plugin name=sidebar included=1 author="Tuomo Valkonen"]]
 [[tag type/chrome]]
 
 If this plugin is enabled, then a sidebar is added to pages in the wiki.
