--- a/doc/plugins/smiley.mdwn
+++ b/doc/plugins/smiley.mdwn
@@ -1,4 +1,4 @@
-[[template id=plugin name=smiley included=1 author="""[[Joey]]"""]]
+[[template id=plugin name=smiley included=1 author="[[Joey]]"]]
 [[tag type/chrome]]
 
 This plugin makes it easy to insert smileys and other special symbols into
