--- a/doc/plugins/tag.mdwn
+++ b/doc/plugins/tag.mdwn
@@ -1,4 +1,4 @@
-[[template id=plugin name=tag included=1 author="""[[Joey]]"""]]
+[[template id=plugin name=tag included=1 author="[[Joey]]"]]
 [[tag type/tags type/link]]
 
 This plugin allows tagging pages. List tags as follows:
