--- a/doc/plugins/template.mdwn
+++ b/doc/plugins/template.mdwn
@@ -1,4 +1,4 @@
-[[template id=plugin name=template included=1 author="""[[Joey]]"""]]
+[[template id=plugin name=template included=1 author="[[Joey]]"]]
 [[tag type/format]]
 
 With this plugin, you can set up templates, and cause them to be filled out
