--- a/doc/plugins/inline.mdwn
+++ b/doc/plugins/inline.mdwn
@@ -1,4 +1,4 @@
-[[template id=plugin name=inline core=1 included=1 author="""[[Joey]]"""]]
+[[template id=plugin name=inline core=1 included=1 author="[[Joey]]"]]
 [[tag type/core]]
 
 This is a [[PreProcessorDirective]] that allows including one wiki page
