web commit by EdAvis

--- a/doc/install.mdwn
+++ b/doc/install.mdwn
@@ -7,7 +7,7 @@ Ikiwiki requires [[MarkDown]] and the `HTML::Parser` perl module be
 installed, and also uses the following perl modules if available: 
 `CGI::Session` `CGI::FormBuilder` (version 3.02.02 or newer)
 `HTML::Template` `Mail::SendMail` `Time::Duration` `Date::Parse`,
-`HTML::Scrubber`, `RPC::XML`, `XML::Simple`, `XML::Feed`
+`HTML::Scrubber`, `RPC::XML`, `XML::Simple`, `XML::Feed`.  The 'fortune' plugin uses fortune(1).
 
 If you're installing MarkDown by hand, note that it should be installed as
 `Markdown.pm` somewhere in perl's module search path, or alternately as
