web commit by EdAvis

--- a/doc/subversion.mdwn
+++ b/doc/subversion.mdwn
@@ -1,5 +1,5 @@
-Subversion is a revision control system. While ikiwiki is relatively
-independant of the underlying revision control system, and can easily be
+[Subversion](http://subversion.tigris.org/) is a revision control system. While ikiwiki is relatively
+independent of the underlying revision control system, and can easily be
 used without one, using it with Subversion is recommended since it's how
 the author uses it.
 
