--- a/doc/subversion.mdwn
+++ b/doc/subversion.mdwn
@@ -1,7 +1,7 @@
 [Subversion](http://subversion.tigris.org/) is a revision control system. While ikiwiki is relatively
 independent of the underlying revision control system, and can easily be
 used without one, using it with Subversion is recommended since it's how
-the author uses it.
+the author uses it. ([[Git]] is another option.)
 
 Ikiwiki can run as a [[post-commit]] hook to update a wiki whenever commits
 come in. When running as a [[cgi]] with Subversion, ikiwiki automatically
