--- a/debian/changelog
+++ b/debian/changelog
@@ -24,8 +24,11 @@ ikiwiki (1.22) UNRELEASED; urgency=low
     that looks like a wikilink will now have it treated as such; AFAIK
     this doesn't change any behavior though except for the template plugin.
   * Enable preprocessor directives when previewing an edit.
+  * Make all pages pull in a local.css style sheet, if present. This won't
+    be included in ikiwiki, but can be created to make local styling changes
+    w/o needing to merge in every new change to the distributed style.css.
 
- -- Joey Hess <joeyh@debian.org>  Wed, 23 Aug 2006 15:30:09 -0400
+ -- Joey Hess <joeyh@debian.org>  Thu, 24 Aug 2006 16:29:24 -0400
 
 ikiwiki (1.21) unstable; urgency=low
 
