--- a/doc/bugs/PREFIX_not_honoured_for_underlaydir.mdwn
+++ b/doc/bugs/PREFIX_not_honoured_for_underlaydir.mdwn
@@ -26,6 +26,21 @@ it shouldn't try to use /usr/share here.
 	when building the package, to make it install into a temporary
 	directory which gets packaged up.
 
+This is not the case.  That is the difference between PREFIX and DESTDIR.
+
+DESTDIR does what you describe; it causes the files to be installed into some
+directory you specify, which may not be the same place you'd eventually
+run it from.
+
+PREFIX means build the software to run under the location given.  Normally it
+will also affect the location files are copied to, so that 'make install'
+installs a working system.
+
+At least, that's the way I've always understood it; the MakeMaker documentation
+isn't entirely clear (perhaps because ordinary Perl modules do not need to be
+configured at build time depending on the installation directory).  It does mention
+that DESTDIR is the thing used by packaging tools.
+
 	It would probably be nice if ikiwiki offered a separate build-time
 	setting to control where it looked for its data files, though it already
 	offers a way to do it at runtime (--underlaydir and --templatedir).
