--- a/doc/bugs/PREFIX_not_honoured_for_underlaydir.mdwn
+++ b/doc/bugs/PREFIX_not_honoured_for_underlaydir.mdwn
@@ -41,8 +41,4 @@ isn't entirely clear (perhaps because ordinary Perl modules do not need to be
 configured at build time depending on the installation directory).  It does mention
 that DESTDIR is the thing used by packaging tools.
 
-	It would probably be nice if ikiwiki offered a separate build-time
-	setting to control where it looked for its data files, though it already
-	offers a way to do it at runtime (--underlaydir and --templatedir).
-
-	--[[Joey]]
+	Thanks for clarifying that. [[bugs/done]] --[[Joey]]
