* Generalised preprocesser loop protection code.

--- a/debian/changelog
+++ b/debian/changelog
@@ -30,8 +30,9 @@ ikiwiki (1.22) UNRELEASED; urgency=low
   * Use DESTDIR and not PREFIX to specify installation prefix for packaging.
   * Support running "perl Makefile.PL PREFIX=foo" to build ikiwiki to run
     from a different directory.
+  * Generalised preprocesser loop protection code.
 
- -- Joey Hess <joeyh@debian.org>  Thu, 24 Aug 2006 21:28:45 -0400
+ -- Joey Hess <joeyh@debian.org>  Fri, 25 Aug 2006 14:48:36 -0400
 
 ikiwiki (1.21) unstable; urgency=low
 
