--- a/doc/todo/rss_title_description.mdwn
+++ b/doc/todo/rss_title_description.mdwn
@@ -6,3 +6,22 @@ a single wiki it seems, and the title is forced to be one word,
 though I don't think it needs to be.
 
 A few pointers and I might be able to implement this myself. -- JamesWestby
+
+	I don't see any problem with the title, it's the same as the title
+	of the wiki page that the rss feed comes from, which can be set
+	using the meta plugin. There are no restrictions to one word or
+	anything like that. Just made ikiwiki emit the following in a test
+	feed:
+
+		<title>billy bob&#39;s news</title>
+
+	Now, the description field currently defaults to the wiki name,
+	and that could indeed stand to be made configurable. Since the
+	current (svn) version of ikiwiki supports long, word-wrapped
+	blocks of text as parameters to [[PreProcessorDirective]]s, seems
+	to me the best way would be to simple modify inline.pm to make the
+	descripion configurable by such parameter, with a fallback to the
+	wiki name. You'll need to modify rsspage.tmpl to use whatever new
+	template variable you define, that should be all.
+
+	--[[Joey]]
