web commit by JamesWestby

--- a/doc/todo/rss_title_description.mdwn
+++ b/doc/todo/rss_title_description.mdwn
@@ -25,3 +25,7 @@ A few pointers and I might be able to implement this myself. -- JamesWestby
 	template variable you define, that should be all.
 
 	--[[Joey]]
+
+Apologies for the title thing. I tried it yesterday, and it onlt used the first word.
+I must have done something wrong. I'll have a look at implementing the description.
+Thanks. -- JamesWestby
