web commit by JamesWestby

--- a/doc/todo/rss_title_description.mdwn
+++ b/doc/todo/rss_title_description.mdwn
@@ -29,3 +29,5 @@ A few pointers and I might be able to implement this myself. -- JamesWestby
 Apologies for the title thing. I tried it yesterday, and it onlt used the first word.
 I must have done something wrong. I'll have a look at implementing the description.
 Thanks. -- JamesWestby
+
+My patch can be found at <http://jameswestby.net/scratch/blog-desc.diff> -- JamesWestby
