* Patch from James Westby to allow a description to be set for rss feeds.

--- a/debian/changelog
+++ b/debian/changelog
@@ -31,8 +31,9 @@ ikiwiki (1.22) UNRELEASED; urgency=low
   * Support running "perl Makefile.PL PREFIX=foo" to build ikiwiki to run
     from a different directory.
   * Generalised preprocesser loop protection code.
+  * Patch from James Westby to allow a description to be set for rss feeds.
 
- -- Joey Hess <joeyh@debian.org>  Fri, 25 Aug 2006 14:48:36 -0400
+ -- Joey Hess <joeyh@debian.org>  Sat, 26 Aug 2006 13:26:22 -0400
 
 ikiwiki (1.21) unstable; urgency=low
 
