--- a/doc/plugins/inline.mdwn
+++ b/doc/plugins/inline.mdwn
@@ -27,3 +27,5 @@ directive:
   if raw is set to "yes", the page will be included raw, without additional
   markup around it, as if it were a literal part of the source of the 
   inlining page.
+* `description` - Sets the description of the rss feed if one is generated.
+  Defaults to the name of the wiki.
