--- a/doc/todo/rss_title_description.mdwn
+++ b/doc/todo/rss_title_description.mdwn
@@ -31,3 +31,5 @@ I must have done something wrong. I'll have a look at implementing the descripti
 Thanks. -- JamesWestby
 
 My patch can be found at <http://jameswestby.net/scratch/blog-desc.diff> -- JamesWestby
+
+	Thanks, [[todo/done]] --[[Joey]]
