--- a/doc/todo/blogging.mdwn
+++ b/doc/todo/blogging.mdwn
@@ -11,3 +11,17 @@ when make is used without PREFIX.
 http://jameswestby.net/scratch/podcast.diff
 
 -- JamesWestby
+
+	Hmm. Not quite how I'd envisioned podcasts would work, my idea was
+	more that the sound files would be kept inside the wiki, and the
+	inline plugin could be told to eg, inline *.mp3, and would add
+	those to the rss feed as enclosures. Maybe you'd also inline some
+	regular blog pages to describe the files or the like.
+
+	Do you think that would work or that it's worth pursuing that
+	approach? I haven't looked at podcasts enough to know if that
+	method would be technically feasable; for one thing it would limit
+	the blog items for podcasts to just having an enclosure but no
+	description.
+
+	--[[Joey]]
