--- a/debian/changelog
+++ b/debian/changelog
@@ -32,8 +32,10 @@ ikiwiki (1.22) UNRELEASED; urgency=low
     from a different directory.
   * Generalised preprocesser loop protection code.
   * Patch from James Westby to allow a description to be set for rss feeds.
+  * Patch from James Westby to add a template for the search form.
+  * Cache search form for speedup.
 
- -- Joey Hess <joeyh@debian.org>  Sat, 26 Aug 2006 13:26:22 -0400
+ -- Joey Hess <joeyh@debian.org>  Sat, 26 Aug 2006 17:51:16 -0400
 
 ikiwiki (1.21) unstable; urgency=low
 
