--- a/doc/todo/blogging.mdwn
+++ b/doc/todo/blogging.mdwn
@@ -24,4 +24,8 @@ http://jameswestby.net/scratch/podcast.diff
 	the blog items for podcasts to just having an enclosure but no
 	description.
 
+	Even if that doesn't work and pages are needed to desribe the items
+	like you did, it still seems better to keep the podcast items in
+	the wiki..
+
 	--[[Joey]]
