web commit by JamesWestby: Correct name of Mail::Sendmail module

--- a/doc/install.mdwn
+++ b/doc/install.mdwn
@@ -6,7 +6,7 @@ Ikiwiki is a perl program, and needs a recent version of perl such as
 Ikiwiki requires [[MarkDown]] and the `HTML::Parser` perl module be
 installed, and also uses the following perl modules if available: 
 `CGI::Session` `CGI::FormBuilder` (version 3.02.02 or newer)
-`HTML::Template` `Mail::SendMail` `Time::Duration` `Date::Parse`,
+`HTML::Template` `Mail::Sendmail` `Time::Duration` `Date::Parse`,
 `HTML::Scrubber`, `RPC::XML`, `XML::Simple`, `XML::Feed`.
 
 Various [[plugins]] use other libraries and utlities; see their individual
