* Added a ddate plugin.

--- a/debian/changelog
+++ b/debian/changelog
@@ -34,8 +34,9 @@ ikiwiki (1.22) UNRELEASED; urgency=low
   * Patch from James Westby to allow a description to be set for rss feeds.
   * Patch from James Westby to add a template for the search form.
   * Cache search form for speedup.
+  * Added a ddate plugin.
 
- -- Joey Hess <joeyh@debian.org>  Sat, 26 Aug 2006 17:51:16 -0400
+ -- Joey Hess <joeyh@debian.org>  Sat, 26 Aug 2006 23:48:31 -0400
 
 ikiwiki (1.21) unstable; urgency=low
 
