--- a/doc/plugins/rst.mdwn
+++ b/doc/plugins/rst.mdwn
@@ -1,5 +1,6 @@
 [[template id=plugin name=rst included=1 author="Sergio Talens-Oliag"]]
 [[tag type/format]]
+[[tag type/slow]]
 
 This plugin lets ikwiki convert files with names ending in ".rst" to html.
 It uses the [reStructuredText](http://docutils.sourceforge.net/rst.html)
