--- a/doc/todo/plugin_dependency_calulation.mdwn
+++ b/doc/todo/plugin_dependency_calulation.mdwn
@@ -15,7 +15,7 @@ the list of pages to rebuild.
 Which in turn suggests that there should *be* a list of pages to rebuild;
 currently there's not, and the best such an interface could do would be to
 rebuild the pages even if they were already going to be rebuilt for some
-other reason. (See [[optimisation]].)
+other reason. (See [[optimisations]].)
 
 It also suggests that plugins will want to examine pages and/or
 [[store_data|plugin_data_storage]] about them to use in the dependency
