--- a/doc/templates.mdwn
+++ b/doc/templates.mdwn
@@ -47,5 +47,5 @@ be customised with templates, although most of it can, by creating these
 templates. Without the templates, CGI::FormBuilder creates the page bodies
 by itself.
 
-The [[plugin/template]] plugin also uses templates, though those templates
+The [[plugins/template]] plugin also uses templates, though those templates
 are stored in the wiki.
