--- a/debian/changelog
+++ b/debian/changelog
@@ -35,8 +35,13 @@ ikiwiki (1.22) UNRELEASED; urgency=low
   * Patch from James Westby to add a template for the search form.
   * Cache search form for speedup.
   * Added a ddate plugin.
+  * Patch from James Westby to add a --sslcookie switch, which forces
+    cookies to only be sent over ssl connections to avoid interception.
+  * Factor out the cgi header printing code into a new function.
+  * Fix preferences page on anonok wikis; still need to sign in to get
+    to the preferences page.
 
- -- Joey Hess <joeyh@debian.org>  Sat, 26 Aug 2006 23:48:31 -0400
+ -- Joey Hess <joeyh@debian.org>  Sun, 27 Aug 2006 16:17:21 -0400
 
 ikiwiki (1.21) unstable; urgency=low
 
