--- a/basewiki/wikilink.mdwn
+++ b/basewiki/wikilink.mdwn
@@ -6,7 +6,7 @@ If you ever need to write something like "\[[WikiLink]] without creating a
 wikilink, just prefix it with a "\", like "\\\\[[WikiLink]]".
 
 There are some special [[SubPage/LinkingRules]] that come into play when
-linking between [[SubPage]]s.
+linking between [[SubPages|SubPage]].
 
 Also, if the file linked to by a WikiLink looks like an image, it will
 be displayed inline on the page.
